apps/base/terria/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terria
  namespace: terria
spec:
  selector:
    matchLabels:
      app: terria
  template:
    metadata:
      labels:
        app: terria
    spec:
      containers:
        - name: terria
          image: ghcr.io/example/org-maps:0.2.2-12-ge1822d9  # {"$imagepolicy": "flux-system:org-maps"}
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2
              memory: 2Gi
            requests:
              cpu: 1
              memory: 1Gi
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
