apps/base/terria/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: terria
  namespace: terria
spec:
  selector:
    app: terria
  ports:
    - port: 3001
      targetPort: 3001
